--- a/docs/report/biblio.bib
+++ b/docs/report/biblio.bib
@@ -23,13 +23,210 @@
 }
 
 @Book{QuentinCharatan2019,
-  author    = {Quentin Charatan, Aaron Kans},
+  author    = {Charatan, Quentin and Kans, Aaron},
   date      = {2019-03-01},
   title     = {Java in Two Semesters},
   isbn      = {3319994190},
   publisher = {Springer-Verlag GmbH},
   ean       = {9783319994192},
   year      = {2019},
+}
+
+@WWW{MacWright2020,
+  author  = {Tom MacWright},
+  date    = {2020-05-10},
+  title   = {Second-guessing the modern web},
+  url     = {https://macwright.com/2020/05/10/spa-fatigue.html},
+  urldate = {2020-07-30},
+}
+
+@WWW{Lopez2020,
+  author  = {Daniel Andres Pelaez Lopez},
+  date    = {2020-07-18},
+  title   = {A Bright Future For Java and The JVM},
+  url     = {https://coderstower.com/2020/07/18/a-bright-future-for-java-and-the-jvm/},
+  urldate = {2020-07-30},
+}
+
+@Book{Walls2019,
+  author    = {Walls, Craig},
+  date      = {2019-01-25},
+  title     = {Spring in Action, Fifth Edition},
+  isbn      = {1617294942},
+  pagetotal = {520},
+  publisher = {Manning Publications},
+  ean       = {9781617294945},
+  year      = {2019},
+}
+
+@Book{CarloScarioni2019,
+  author    = {Scarioni, Carlo and Nardone, Massimo},
+  date      = {2019-11-22},
+  title     = {Pro Spring Security},
+  isbn      = {1484250516},
+  pagetotal = {428},
+  publisher = {Apress},
+  ean       = {9781484250518},
+  year      = {2019},
+}
+
+@Book{ScottChacon2014,
+  author    = {Chacon, Scott and Straub, Ben},
+  date      = {2014-12-24},
+  title     = {Pro Git},
+  isbn      = {1484200772},
+  publisher = {APRESS L.P.},
+  url       = {https://git-scm.com/book/en/v2},
+  ean       = {9781484200773},
+  year      = {2014},
+}
+
+@Book{Sonatype2008,
+  author    = {Sonatype},
+  date      = {2008-08-04},
+  title     = {Maven : The Definitive Guide},
+  isbn      = {9780596517335},
+  publisher = {O'Reilly Media},
+  year      = {2008},
+}
+
+@Book{Martin2009,
+  author    = {Martin, Robert C.},
+  date      = {2009-03-01},
+  title     = {Clean Code},
+  isbn      = {0132350882},
+  pagetotal = {464},
+  publisher = {Prentice Hall},
+  ean       = {9780132350884},
+  year      = {2009},
+}
+
+@WWW{Fowler2004,
+  author  = {Martin Fowler},
+  date    = {2004-06-23},
+  title   = {Inversion of Control Containers and the Dependency Injection pattern},
+  url     = {https://martinfowler.com/articles/injection.html},
+  urldate = {2020-07-30},
+}
+
+@Online{Johnson2020,
+  author  = {Johnson, Rod and Hoeller, Juergen and Nicoll, Stephane and Deleuze, Sebastien and Bryant, Jay and Paluch, Mark},
+  editor  = {Pivotal},
+  date    = {2020-06-09},
+  title   = {Spring Framework Documentation},
+  url     = {https://docs.spring.io/spring/docs/current/spring-framework-reference/},
+  urldate = {2020-07-30},
+  version = {5.2.7.RELEASE},
+}
+
+@WWW{JanssenRepository,
+  author  = {Thorben Janssen},
+  title   = {Implementing the Repository pattern with JPA and Hibernate},
+  url     = {https://thorben-janssen.com/implementing-the-repository-pattern-with-jpa-and-hibernate/},
+  urldate = {2020-07-31},
+}
+
+@WWW{JanssenJPA,
+  author  = {Thorben Janssen},
+  title   = {What is Spring Data JPA? And why should you use it?},
+  url     = {https://thorben-janssen.com/what-is-spring-data-jpa-and-why-should-you-use-it/#3_reasons_to_use_Spring_Data_JPA},
+  urldate = {2020-07-31},
+}
+
+@WWW{Tyson2019,
+  author   = {Matthew Tyson},
+  date     = {2019-04-02},
+  title    = {What is JPA? Introduction to the Java Persistence API},
+  url      = {https://www.infoworld.com/article/3379043/what-is-jpa-introduction-to-the-java-persistence-api.html},
+  subtitle = {The Java ORM standard for storing, accessing, and managing Java objects in a relational database},
+  urldate  = {2020-07-31},
+}
+
+@WWW{Behler2020,
+  author  = {Marco Behler},
+  date    = {2020-07-28},
+  title   = {Spring Security: Authentication and Authorization In-Depth},
+  url     = {https://www.marcobehler.com/guides/spring-security},
+  urldate = {2020-07-31},
+}
+
+@Online{Alex2020,
+  author  = {Alex, Ben and Taylor, Luke and Winch, Rob and Hillert, Gunnar and Grandja, Joe and Bryant, Jay and Meléndez, Eddú and Cummings, Josh and Syer, Dave},
+  date    = {2020-06-03},
+  title   = {Spring Security Reference},
+  url     = {https://docs.spring.io/spring-security/site/docs/current/reference/html5/},
+  urldate = {2020-07-31},
+  version = {5.3.3.RELEASE},
+}
+
+@WWW{Mozilla2020,
+  author       = {Mozilla},
+  editor       = {MDN Web Docs},
+  date         = {2020-06-02},
+  title        = {Content Security Policy (CSP)},
+  url          = {https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP},
+  organization = {Mozilla},
+  urldate      = {2020-07-31},
+}
+
+@WWW{West2012,
+  author  = {Mike West},
+  date    = {2012-06-15},
+  title   = {An Introduction to Content Security Policy},
+  url     = {https://www.html5rocks.com/en/tutorials/security/content-security-policy/},
+  urldate = {2020-07-31},
+  version = {September 30th, 2016},
+}
+
+@WWW{Heroku2019,
+  author  = {Heroku},
+  editor  = {Heroku Dev Center},
+  date    = {2019-07-19},
+  title   = {Understanding SSL on Heroku},
+  url     = {https://devcenter.heroku.com/articles/understanding-ssl-on-heroku},
+  urldate = {2020-07-31},
+}
+
+@Article{EmpleoySeguridadSocial2018,
+  author       = {Ministerio de Empleo y Seguridad Social},
+  date         = {2018-03-06},
+  journaltitle = {Boletín Oficial del Estado},
+  title        = {Resolución de 22 de febrero de 2018, de la Dirección General de Empleo, por la que se registra y publica el XVII Convenio colectivo estatal de empresas de consultoría y estudios de mercado y de la opinión pública},
+  number       = {57},
+  pages        = {26951-26981},
+  url          = {https://www.boe.es/diario_boe/txt.php?id=BOE-A-2018-3156},
+  urldate      = {2020-07-31},
+}
+
+@WWW{Barnett2018,
+  author  = {Ryan Barnett},
+  date    = {2018-10-11},
+  title   = {Security Response Headers: What They Are, Why You Should Care and How Akamai Can Help},
+  url     = {https://blogs.akamai.com/sitr/2018/10/security-response-headers-what-they-are-why-you-should-care-and-how-akamai-can-help.html},
+  urldate = {2020-07-31},
+}
+
+@Online{Lopez2019,
+  author  = {Daniel Andres Pelaez Lopez},
+  date    = {2019-03-26},
+  title   = {Dependency Inversion Series},
+  url     = {https://coderstower.com/2019/03/26/dependency-inversion-why-you-shouldnt-avoid-it/},
+  urldate = {2020-07-31},
+}
+
+@WWW{Thompson2016,
+  author  = {John Thompson},
+  date    = {2016-04-08},
+  title   = {Logback Introduction: An Enterprise Logging Framework},
+  url     = {https://springframework.guru/logback-enterprise-logging-framework-2/},
+  urldate = {2020-07-31},
+}
+
+@WWW{JanssenTransactions,
+  author  = {Thorben Janssen},
+  title   = {Managing Transactions with Spring and Spring Data JPA},
+  url     = {https://thorben-janssen.com/transactions-spring-data-jpa/},
+  urldate = {2020-07-31},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
